--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script defer src="@fortawesome/fontawesome-free/js/brands.js"></script>
+  <script defer src="@fortawesome/fontawesome-free/js/solid.js"></script>
+  <script defer src="@fortawesome/fontawesome-free/fontawesome.js"></script>
+
+    <title>Notebook & TodoList</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
